fix: fix vertical and horizontal scroll issues

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   html {
     scroll-behavior: smooth;
     scroll-padding-top: 8rem;
+    overflow-x: hidden;
   }
   body::-webkit-scrollbar {
     display: none;
